# open-defense-kit

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_template.md  SECURITY.md  constants.py  core.py  docker-compose.yml  generate_readme.py  install.py  install.sh  odk.py  pyproject.toml  update.sh
docs/: diagnosis.md  improvement-plan.md  phase-2-migration-classification.md  rebrand-plan.md  safety-model.md  use-cases.md
docs/modules/: local-secret-patterns.md  security-headers-notes.md
legacy/: README.md  migration-map.md
legacy/audit/: .gitkeep
legacy/original/: .gitkeep
odk-web/backend/: catalog.py  main.py  runner.py
odk-web/frontend/: index.html  package-lock.json  tailwind.config.js
odk-web/frontend/src/: App.jsx  index.css
odkit/: __init__.py  cli.py  command_guard.py  legacy_audit.py  migration_classifier.py  module_registry.py  safety.py
odkit/modules/: __init__.py  local_secret_patterns.py
tools/: active_directory.py  anonsurf.py  cloud_security.py  ddos.py  exploit_frameworks.py  forensics.py  information_gathering.py  mobile_security.py  other_tools.py  payload_creator.py  phishing_attack.py  post_exploitation.py  remote_administration.py  reverse_engineering.py  sql_injection.py  steganography.py  tool_manager.py  web_attack.py  wireless_attack.py  wordlist_generator.py  xss_attack.py
tools/others/: android_attack.py  email_verifier.py  hash_crack.py  homograph_attacks.py  mix_tools.py  payload_injection.py  socialmedia.py  socialmedia_finder.py  web_crawling.py  wifi_jamming.py
